classDiagram
    class Pasajero {
        -id: int
        -destino: String
        -tiempoInicio: Instant
        -tiempoLlegada: Instant
        +Pasajero(int id, String destino)
        +getDestino(): String
        +getTiempoEsperaMillis(): long
    }

    class Nodo {
        -id: int
        -nombre: String
        -posicionX: double
        -posicionY: double
        -cola: Queue<Pasajero>
        +Nodo(int id, String nombre, double x, double y)
        +agregarPasajero(Pasajero p)
        +removerPasajero(): Pasajero
        +getEsperandoCuantos(): int
    }

    class Arco {
        -origen: Nodo
        -destino: Nodo
        -tiempo: int
        +Arco(Nodo origen, Nodo destino, int tiempo)
        +getTiempo(): int
    }

    class Grafo {
        -paraderos: List<Nodo>
        -adj: Map<Nodo, List<Arco>>
        +Grafo()
        +agregarParadero(Nodo nodo)
        +agregarArco(Nodo origen, Nodo destino, int tiempo)
        +dijkstra(Nodo origen, Nodo destino): List<Nodo>
    }

    class Bus {
        -id: int
        -capacidadMax: int
        -pasajeros: List<Pasajero>
        -rutaIda: List<Nodo>
        -rutaVuelta: List<Nodo>
        -indiceActual: int
        -enIda: boolean
        +Bus(int id, int capacidad, List<Nodo> ida, List<Nodo> vuelta)
        +avanzar()
        +subirPasajeros()
        +bajarPasajeros()
    }

    class Simulador {
        -grafo: Grafo
        -buses: List<Bus>
        -tiempoActual: int
        -tiemposEspera: Map<Nodo, List<Long>>
        +Simulador(Grafo grafo)
        +agregarBus(Bus bus)
        +tick()
        +simular(int ticks)
    }

    class TransporteGUI {
        -simulador: Simulador
        -grafo: Grafo
        -panelGrafo: GraphPanel
        -timerAnimacion: Timer
        +TransporteGUI(Simulador simulador)
        -ejecutarTickLogico()
        -calcularRuta()
    }

    class Maintest {
        +main(String[] args)
    }

    %% Relaciones
    Grafo "1" *-- "*" Nodo
    Grafo "1" *-- "*" Arco
    Nodo --> Pasajero
    
    Bus --> Pasajero
    Bus --> Nodo

    Simulador --> Grafo
    Simulador --> Bus
    
    TransporteGUI --> Simulador
    Maintest --> TransporteGUI